# streamlit-ai-elements

./: .gitignore  MANIFEST.in  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  streamlit-ai-elements.code-workspace
.devcontainer/: devcontainer.json
frontend/: build.js  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/ai-elements/: code-block.tsx  prompt-input.tsx
frontend/src/components/st-ai-elements/: README-CONVERSATION.md  README.md  conversation.tsx  index.ts  prompt-input.tsx
frontend/src/element/: index.tsx  registerComponents.ts
frontend/src/hooks/: useAutoHeight.ts
scripts/: build_frontend.sh  dev.sh  frontend.sh
streamlit_ai_elements/: __init__.py  chat_support.py  runtime_resources.py
streamlit_ai_elements/assets/: excalidraw-editor.css
streamlit_ai_elements/base/: __init__.py  element.py
streamlit_ai_elements/chat/: __init__.py  adapters.py  runtime.py  tools.py  types.py  ui.py
streamlit_ai_elements/utils/: __init__.py  declare.py
tests/: test_excalidraw_chat_support.py
