[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "streamlit-ai-elements"
version = "0.1.0"
description = "AI-powered rendering components for Streamlit"
requires-python = ">=3.10"
dependencies = ["streamlit>=1.44.0", "pandas>=2.0.0"]

[project.optional-dependencies]
dev = ["openai"]
